# CppProjectTemplate

./: .travis.yml  CMakeLists.txt  appveyor.yml
SampleProject/: CMakeLists.txt
UnitTest/: CMakeLists.txt
UnitTest/Source/Private/: Main.cpp
